# ros2_vision_system

./: README_template.md  pyproject.toml
nbs/: 01_camera_setup.ipynb  index.ipynb  nbdev.yml  sidebar.yml
ros2_vision_system/: _utils_cam.py
scripts/python_scripts/: auto_setup.py
