[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2_vision_system"
dynamic = ["version"]
description = "Integration of a vision system with ros2 nodes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Ramon Pozuelo Ruiz", email = "pozueloruizramon@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib-inline<0.1.7",
    "nbdev>=3.0.12",
]

[project.urls]
Repository = "https://github.com/Ramon-PR/ros2_vision_system"
Documentation = "https://Ramon-PR.github.io/ros2_vision_system/"

[project.entry-points.nbdev]
ros2_vision_system = "ros2_vision_system._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "ros2_vision_system.__version__"}

[tool.setuptools.packages.find]
include = ["ros2_vision_system"]

[tool.nbdev]
